crates/syntax/tests/snapshots/parser__parser_attribute workbench.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..90,
        statements: StatementList {
            span: 0..90,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    Workbench(
                        WorkbenchDefinition {
                            span: 0..90,
                            keyword_span: 25..29,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            doc: DocBlock {
                                span: 0..90,
                                lines: [],
                            },
                            kind: Part,
                            attributes: [
                                Attribute {
                                    span: 0..25,
                                    is_inner: false,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    commands: [
                                        Assignment(
                                            LocalAssignment {
                                                span: 2..19,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                attributes: [],
                                                name: Identifier {
                                                    span: 2..7,
                                                    name: "color",
                                                },
                                                ty: None,
                                                value: Literal(
                                                    Literal {
                                                        span: 10..19,
                                                        extras: ItemExtras {
                                                            leading: LeadingExtras(
                                                                [],
                                                            ),
                                                            trailing: TrailingExtras(
                                                                [],
                                                            ),
                                                        },
                                                        literal: String(
                                                            StringLiteral {
                                                                span: 10..19,
                                                                content: "#FF00FF",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ],
                            visibility: None,
                            name: Identifier {
                                span: 30..33,
                                name: "Foo",
                            },
                            plan: ParameterList {
                                span: 34..34,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                parameters: [],
                            },
                            body: Body {
                                span: 36..90,
                                statements: StatementList {
                                    span: 37..89,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [
                                                Whitespace(
                                                    "\n        ",
                                                ),
                                            ],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    statements: [
                                        (
                                            Expression(
                                                ExpressionStatement {
                                                    span: 46..83,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    attributes: [],
                                                    expression: Call(
                                                        Call {
                                                            span: 46..83,
                                                            extras: ItemExtras {
                                                                leading: LeadingExtras(
                                                                    [],
                                                                ),
                                                                trailing: TrailingExtras(
                                                                    [],
                                                                ),
                                                            },
                                                            name: QualifiedName {
                                                                span: 46..54,
                                                                extras: ItemExtras {
                                                                    leading: LeadingExtras(
                                                                        [],
                                                                    ),
                                                                    trailing: TrailingExtras(
                                                                        [],
                                                                    ),
                                                                },
                                                                parts: [
                                                                    Identifier {
                                                                        span: 46..54,
                                                                        name: "Cylinder",
                                                                    },
                                                                ],
                                                            },
                                                            arguments: ArgumentList {
                                                                span: 55..82,
                                                                extras: ItemExtras {
                                                                    leading: LeadingExtras(
                                                                        [],
                                                                    ),
                                                                    trailing: TrailingExtras(
                                                                        [],
                                                                    ),
                                                                },
                                                                arguments: [
                                                                    Named(
                                                                        NamedArgument {
                                                                            span: 55..68,
                                                                            extras: ItemExtras {
                                                                                leading: LeadingExtras(
                                                                                    [],
                                                                                ),
                                                                                trailing: TrailingExtras(
                                                                                    [],
                                                                                ),
                                                                            },
                                                                            name: Identifier {
                                                                                span: 55..61,
                                                                                name: "height",
                                                                            },
                                                                            value: Literal(
                                                                                Literal {
                                                                                    span: 64..68,
                                                                                    extras: ItemExtras {
                                                                                        leading: LeadingExtras(
                                                                                            [],
                                                                                        ),
                                                                                        trailing: TrailingExtras(
                                                                                            [],
                                                                                        ),
                                                                                    },
                                                                                    literal: Quantity(
                                                                                        QuantityLiteral {
                                                                                            span: 64..68,
                                                                                            value: 10.0,
                                                                                            raw: "10",
                                                                                            unit: Unit {
                                                                                                span: 66..68,
                                                                                                name: "mm",
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                    Named(
                                                                        NamedArgument {
                                                                            span: 70..82,
                                                                            extras: ItemExtras {
                                                                                leading: LeadingExtras(
                                                                                    [],
                                                                                ),
                                                                                trailing: TrailingExtras(
                                                                                    [],
                                                                                ),
                                                                            },
                                                                            name: Identifier {
                                                                                span: 70..76,
                                                                                name: "radius",
                                                                            },
                                                                            value: Literal(
                                                                                Literal {
                                                                                    span: 79..82,
                                                                                    extras: ItemExtras {
                                                                                        leading: LeadingExtras(
                                                                                            [],
                                                                                        ),
                                                                                        trailing: TrailingExtras(
                                                                                            [],
                                                                                        ),
                                                                                    },
                                                                                    literal: Quantity(
                                                                                        QuantityLiteral {
                                                                                            span: 79..82,
                                                                                            value: 5.0,
                                                                                            raw: "5",
                                                                                            unit: Unit {
                                                                                                span: 80..82,
                                                                                                name: "mm",
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                            TrailingExtras(
                                                [
                                                    Whitespace(
                                                        "\n    ",
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ],
                                    tail: None,
                                },
                            },
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
