crates/syntax/tests/snapshots/parser__parser_basic addition, no space.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..3,
        statements: StatementList {
            span: 0..3,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..3,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: BinaryOperation(
                            BinaryOperation {
                                span: 0..3,
                                lhs: Literal(
                                    Literal {
                                        span: 0..1,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        literal: Integer(
                                            IntegerLiteral {
                                                span: 0..1,
                                                value: 1,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                                operation: Operator {
                                    span: 1..2,
                                    operation: Add,
                                },
                                rhs: Literal(
                                    Literal {
                                        span: 2..3,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        literal: Integer(
                                            IntegerLiteral {
                                                span: 2..3,
                                                value: 1,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
